Fix compile of security-authorization-engine plugin